<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.curso.hvalentin.stockdroid.Registro">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUsuarioRegister"
                android:hint="@string/btnUsuario"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPasswordRegister"
                android:hint="@string/btnPass"
                android:layout_marginBottom="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassRepeat"
                android:hint="@string/btnPassRepeat"
                android:layout_marginBottom="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etNombreRegister"
                android:hint="@string/btnNombre"
                android:layout_marginBottom="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etApellidosRegister"
                android:hint="@string/btnApellidos"
                android:layout_marginBottom="50dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRegistro"
                    android:id="@+id/btnSignin"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="#fff"
                    android:layout_marginTop="50dp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnVolver"
                android:id="@+id/btnVolverRegistro"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray"
                android:textColor="#fff"
                android:layout_marginTop="0dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
